[package]
name = "rust-sql-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
tiberius = { version = "0.12.3", optional = true, features = ["sql-browser-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.13"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", optional = true }

[build-dependencies]
glob = "0.3.2"

[features]
default = ["postgres"]
postgres = []
mssql = ["dep:tiberius", "dep:tokio-util"]
